# poincare

./: .gitignore  .luacheckrc  .luarc.json  .nvimlog  .selene.toml  .stylua.toml  :wq  Cargo.toml  NOTES.md  README.md  flake.nix  flsproject.fnl  helpers.fnl  init.fnl  init.lua  profile-startup.json  profile-statusline.json  result  rocks.toml  selene.toml  statix.toml  test.fnl  test.lua  test.sh
.github/workflows/: bench.yml  flake-check.yml  main.yml  update-flake-lock.yml
after/ftplugin/: markdown.lua
bench/: .gitignore  README.md  attribute.sh  deferred.sh  env.sh  ledger.lua  nix-metrics.sh  noise-floor.sh  startup.sh  stats.lua
bench/files/: gen.sh
config/: default.nix
docs/: Hacks.md
fnl/: core.fnl  init.fnl  macros.fnl
ftplugin/: markdown.lua
lib/: default.nix  mkNeovim.nix  plugin.nix
lsp/: basedpyright.fnl  basedpyright.lua  bash-language-server.fnl  clangd.fnl  clangd.lua  fennel-ls.fnl  fennel-ls.lua  fennel_language_server.lua  gopls.fnl  gopls.lua  lua-language-server.fnl  lua-language-server.lua  nil.lua  nixd.fnl  nixd.lua  ocamllsp.fnl  ocamllsp.lua  rust-analyzer.fnl  rust-analyzer.lua  texlab.fnl  texlab.lua  tinymist.fnl  tinymist.lua  ty.lua  zls.fnl  zls.lua
lua/: package-manager.lua  packages.lua  rocks-nvim.lua
nix/: mkNeovim.nix  neovim-overlay.nix
nvim/: init.lua
parts/: default.nix  devShell.nix  overlay.nix  packages.nix  treefmt.nix
src/: api.rs  init.lua  lib.rs
tests/: helpers.lua  minit.lua  run.sh  test_boot.lua  test_dap.lua  test_keymaps.lua  test_lsp.lua  test_lzn.lua  test_tooling.lua  test_treesitter.lua
(+288 files in other folders)
