[package]
name = "poincare"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { version = "0.6.0", features = ["neovim-0-11", "mlua"] }
once_cell = { version = "1.21.3", default-features = false }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
